PDF: fix word break on table of contents

--- a/frontend/style/print.scss
+++ b/frontend/style/print.scss
@@ -184,16 +184,18 @@ a {
 }
 
 .contents__list-item {
-  margin: 0.2cm 0;
+  margin: 0.3cm 0;
   padding: 0;
   font-size: 12pt;
-  line-height: 20pt;
+  line-height: 1.2;
   font-weight: bold;
 
   a {
     position: relative;
     display: block;
     padding-right: 2cm;
+    word-break: normal;
+    hyphens: none;
   }
 }
 
